[CDAP-14373] Naive fix for not showing scrollbar for plugin names in pipeline studio left panel

--- a/cdap-ui/app/hydrator/leftpanel.less
+++ b/cdap-ui/app/hydrator/leftpanel.less
@@ -233,6 +233,7 @@ body.theme-cdap.state-hydrator-create {
                       &.plugin-name {
                         line-height: 14px;
                         padding-top: 8px;
+                        overflow: hidden;
                       }
                     }
                   }
